# CourseWork-2term

./: CMakeLists.txt  Challenge.sln  Challenge.vcxproj  Challenge.vcxproj.filters  Libraries.h  README.md  acc.cpp  acc.h  accMenu.cpp  accMenu.h  account.txt  check.cpp  check.h  dorm.cpp  dorm.h  dorm.txt  file.cpp  file.h  list.cpp  list.h  main.cpp  registration.txt  sort.cpp  sort.h  student.txt
